<resources>
    <string name="app_name">BTS Media Player</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_image">song image</string>
    <string name="song_title">song title</string>
    <string name="now_playing">Now playing...</string>
    <string name="notification_body">Originary from...</string>
    <string name="button_previous">previous</string>
    <string name="button_play">play</string>
    <string name="button_pause">pause</string>
    <string name="button_next">next</string>
    <string name="song_comments">song comments</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
</resources>
